--- a/TheInternetApp/test-output/emailable-report.html
+++ b/TheInternetApp/test-output/emailable-report.html
@@ -9,11 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Tests</th></tr>
-<tr><td><a href="#t0">End2End Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7.710</td><td></td><td></td></tr>
+<tr><td><a href="#t0">End2End Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6.034</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Tests</th></tr></tbody><tbody id="t0"><tr><th colspan="4">End2End Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">tests.FormAuthenticationTest</td><td><a href="#m0">testSuccessfulFormAuthentication</a></td><td rowspan="1">1652708900334</td><td rowspan="1">482</td></tr><tr class="passedeven"><td><a href="#m1">testUnsuccessfulFormAuthentication</a></td><td rowspan="1">1652708903759</td><td rowspan="1">325</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Tests</th></tr></tbody><tbody id="t0"><tr><th colspan="4">End2End Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">tests.ScenarioTest</td><td><a href="#m0">performOperations</a></td><td rowspan="1">1652722838909</td><td rowspan="1">1664</td></tr></tbody>
 </table>
-<h2>End2End Test</h2><h3 id="m0">tests.FormAuthenticationTest#testSuccessfulFormAuthentication</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">tests.FormAuthenticationTest#testUnsuccessfulFormAuthentication</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>End2End Test</h2><h3 id="m0">tests.ScenarioTest#performOperations</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
