--- a/TheInternetApp/test-output/index.html
+++ b/TheInternetApp/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,7 @@
                     <div class="method-list-content passed suite-Tests">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Tests" title="tests.FormAuthenticationTest" class="method navigator-link" hash-for-method="testSuccessfulFormAuthentication">testSuccessfulFormAuthentication</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Tests" title="tests.FormAuthenticationTest" class="method navigator-link" hash-for-method="testUnsuccessfulFormAuthentication">testUnsuccessfulFormAuthentication</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Tests" title="tests.ScenarioTest" class="method navigator-link" hash-for-method="performOperations">performOperations</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Tests -->
@@ -127,21 +122,14 @@
           <div class="suite-Tests-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">tests.FormAuthenticationTest</span>
+              <span class="class-name">tests.ScenarioTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testSuccessfulFormAuthentication">
-                  </a> <!-- testSuccessfulFormAuthentication -->
-                  <span class="method-name">testSuccessfulFormAuthentication</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testUnsuccessfulFormAuthentication">
-                  </a> <!-- testUnsuccessfulFormAuthentication -->
-                  <span class="method-name">testUnsuccessfulFormAuthentication</span>
+                  <a name="performOperations">
+                  </a> <!-- performOperations -->
+                  <span class="method-name">performOperations</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -158,7 +146,7 @@
 &lt;suite name=&quot;Tests&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;End2End Test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;tests.FormAuthenticationTest&quot;/&gt;
+      &lt;class name=&quot;tests.ScenarioTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- End2End Test --&gt;
 &lt;/suite&gt; &lt;!-- Tests --&gt;
@@ -198,20 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testSuccessfulFormAuthentication')
-data.setCell(0, 2, 'tests.FormAuthenticationTest')
-data.setCell(0, 3, 482);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testUnsuccessfulFormAuthentication')
-data.setCell(1, 2, 'tests.FormAuthenticationTest')
-data.setCell(1, 3, 325);
+data.setCell(0, 1, 'performOperations')
+data.setCell(0, 2, 'tests.ScenarioTest')
+data.setCell(0, 3, 1664);
 window.suiteTableData['Tests']= { tableData: data, tableDiv: 'times-div-Tests'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 807 ms</span>
+              <span class="suite-total-time">Total running time: 1 seconds</span>
               <div id="times-div-Tests">
               </div> <!-- times-div-Tests -->
             </div> <!-- times-div -->
@@ -237,30 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.FormAuthenticationTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.ScenarioTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">testSuccessfulFormAuthentication</span>
-                <span class="method-start">3301 ms</span>
+                <span class="method-name">performOperations</span>
+                <span class="method-start">3674 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">3784 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <span class="method-name">setUp</span>
-                <span class="method-start">4410 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="test-method">
-                <span class="method-name">testUnsuccessfulFormAuthentication</span>
-                <span class="method-start">6726 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-method after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">7052 ms</span>
+                <span class="method-start">5338 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
