--- a/TheInternetApp/test-output/old/Tests/classes.html
+++ b/TheInternetApp/test-output/old/Tests/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>tests.FormAuthenticationTest</td>
+<td>tests.ScenarioTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testSuccessfulFormAuthentication</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>testUnsuccessfulFormAuthentication</td>
+<td>performOperations</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
