--- a/TheInternetApp/test-output/index.html
+++ b/TheInternetApp/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">8 methods,   8 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,42 @@
                     <div class="method-list-content passed suite-Tests">
                       <span>
                         <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Tests" title="tests.AddToCartTest" class="method navigator-link" hash-for-method="addProductToBasket">addProductToBasket</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Tests" title="tests.CheckoutTest" class="method navigator-link" hash-for-method="buyProducts">buyProducts</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Tests" title="tests.AddToCartTest" class="method navigator-link" hash-for-method="deleteProductFromBasket">deleteProductFromBasket</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Tests" title="tests.ScenarioTest" class="method navigator-link" hash-for-method="performOperations">performOperations</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Tests" title="tests.FormAuthenticationTest" class="method navigator-link" hash-for-method="testSuccessfulFormAuthentication">testSuccessfulFormAuthentication</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Tests" title="tests.LogoutTest" class="method navigator-link" hash-for-method="testSuccessfulLogout">testSuccessfulLogout</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Tests" title="tests.LogoutTest" class="method navigator-link" hash-for-method="testUnSuccessfulLogout">testUnSuccessfulLogout</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Tests" title="tests.FormAuthenticationTest" class="method navigator-link" hash-for-method="testUnsuccessfulFormAuthentication">testUnsuccessfulFormAuthentication</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Tests -->
@@ -122,6 +157,65 @@
           <div class="suite-Tests-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
+              <span class="class-name">tests.CheckoutTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="buyProducts">
+                  </a> <!-- buyProducts -->
+                  <span class="method-name">buyProducts</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Tests-class-passed -->
+          <div class="suite-Tests-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.AddToCartTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="addProductToBasket">
+                  </a> <!-- addProductToBasket -->
+                  <span class="method-name">addProductToBasket</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="deleteProductFromBasket">
+                  </a> <!-- deleteProductFromBasket -->
+                  <span class="method-name">deleteProductFromBasket</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Tests-class-passed -->
+          <div class="suite-Tests-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.FormAuthenticationTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSuccessfulFormAuthentication">
+                  </a> <!-- testSuccessfulFormAuthentication -->
+                  <span class="method-name">testSuccessfulFormAuthentication</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testUnsuccessfulFormAuthentication">
+                  </a> <!-- testUnsuccessfulFormAuthentication -->
+                  <span class="method-name">testUnsuccessfulFormAuthentication</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Tests-class-passed -->
+          <div class="suite-Tests-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
               <span class="class-name">tests.ScenarioTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -130,6 +224,28 @@
                   <a name="performOperations">
                   </a> <!-- performOperations -->
                   <span class="method-name">performOperations</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Tests-class-passed -->
+          <div class="suite-Tests-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">tests.LogoutTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testSuccessfulLogout">
+                  </a> <!-- testSuccessfulLogout -->
+                  <span class="method-name">testSuccessfulLogout</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testUnSuccessfulLogout">
+                  </a> <!-- testUnSuccessfulLogout -->
+                  <span class="method-name">testUnSuccessfulLogout</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -146,6 +262,10 @@
 &lt;suite name=&quot;Tests&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;End2End Test&quot;&gt;
     &lt;classes&gt;
+      &lt;class name=&quot;tests.FormAuthenticationTest&quot;/&gt;
+      &lt;class name=&quot;tests.AddToCartTest&quot;/&gt;
+      &lt;class name=&quot;tests.CheckoutTest&quot;/&gt;
+      &lt;class name=&quot;tests.LogoutTest&quot;/&gt;
       &lt;class name=&quot;tests.ScenarioTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- End2End Test --&gt;
@@ -160,7 +280,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">End2End Test (1 class)</span>
+                <span class="test-name">End2End Test (5 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -186,16 +306,44 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(8);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'performOperations')
 data.setCell(0, 2, 'tests.ScenarioTest')
-data.setCell(0, 3, 1664);
+data.setCell(0, 3, 2288);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'buyProducts')
+data.setCell(1, 2, 'tests.CheckoutTest')
+data.setCell(1, 3, 1400);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testSuccessfulLogout')
+data.setCell(2, 2, 'tests.LogoutTest')
+data.setCell(2, 3, 1268);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'deleteProductFromBasket')
+data.setCell(3, 2, 'tests.AddToCartTest')
+data.setCell(3, 3, 706);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'addProductToBasket')
+data.setCell(4, 2, 'tests.AddToCartTest')
+data.setCell(4, 3, 627);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'testUnSuccessfulLogout')
+data.setCell(5, 2, 'tests.LogoutTest')
+data.setCell(5, 3, 539);
+data.setCell(6, 0, 6)
+data.setCell(6, 1, 'testUnsuccessfulFormAuthentication')
+data.setCell(6, 2, 'tests.FormAuthenticationTest')
+data.setCell(6, 3, 453);
+data.setCell(7, 0, 7)
+data.setCell(7, 1, 'testSuccessfulFormAuthentication')
+data.setCell(7, 2, 'tests.FormAuthenticationTest')
+data.setCell(7, 3, 423);
 window.suiteTableData['Tests']= { tableData: data, tableDiv: 'times-div-Tests'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Tests">
               </div> <!-- times-div-Tests -->
             </div> <!-- times-div -->
@@ -221,18 +369,114 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">tests.ScenarioTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">tests.FormAuthenticationTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">performOperations</span>
-                <span class="method-start">3674 ms</span>
+                <span class="method-name">testSuccessfulFormAuthentication</span>
+                <span class="method-start">2722 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">5338 ms</span>
+                <span class="method-start">3145 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">3842 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testUnsuccessfulFormAuthentication</span>
+                <span class="method-start">6181 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">6635 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">tests.AddToCartTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">7332 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">addProductToBasket</span>
+                <span class="method-start">9683 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">10310 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">10961 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">deleteProductFromBasket</span>
+                <span class="method-start">13383 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">14089 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">tests.CheckoutTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">14760 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">buyProducts</span>
+                <span class="method-start">17056 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">18456 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">tests.LogoutTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">19125 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testSuccessfulLogout</span>
+                <span class="method-start">21418 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">22686 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">23390 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">testUnSuccessfulLogout</span>
+                <span class="method-start">25742 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">26281 ms</span>
+              </div> <!-- configuration-method after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">tests.ScenarioTest</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">27010 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">performOperations</span>
+                <span class="method-start">29322 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">31610 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
