--- a/TheInternetApp/test-output/old/Tests/methods.html
+++ b/TheInternetApp/test-output/old/Tests/methods.html
@@ -1,10 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Tests</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6ba293">  <td>22/05/16 20:40:35</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ScenarioTest.setUp()[pri:0, instance:tests.ScenarioTest@7fe8ea47]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1213349904</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>22/05/16 20:40:38</td>   <td>3674</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScenarioTest.performOperations()[pri:0, instance:tests.ScenarioTest@7fe8ea47]">performOperations</td> 
-  <td>main@1213349904</td>   <td></td> </tr>
-<tr bgcolor="6ba293">  <td>22/05/16 20:40:40</td>   <td>5338</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ScenarioTest.tearDown()[pri:0, instance:tests.ScenarioTest@7fe8ea47]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@1213349904</td>   <td></td> </tr>
+<tr bgcolor="8b976c">  <td>22/05/18 07:41:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FormAuthenticationTest.setUp()[pri:0, instance:tests.FormAuthenticationTest@55040f2f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="8b976c">  <td>22/05/18 07:41:34</td>   <td>2722</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FormAuthenticationTest.testSuccessfulFormAuthentication()[pri:0, instance:tests.FormAuthenticationTest@55040f2f]">testSuccessfulFormAuthentication</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="8b976c">  <td>22/05/18 07:41:34</td>   <td>3145</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FormAuthenticationTest.tearDown()[pri:0, instance:tests.FormAuthenticationTest@55040f2f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="8b976c">  <td>22/05/18 07:41:35</td>   <td>3842</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;FormAuthenticationTest.setUp()[pri:0, instance:tests.FormAuthenticationTest@55040f2f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="8b976c">  <td>22/05/18 07:41:38</td>   <td>6181</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FormAuthenticationTest.testUnsuccessfulFormAuthentication()[pri:0, instance:tests.FormAuthenticationTest@55040f2f]">testUnsuccessfulFormAuthentication</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="8b976c">  <td>22/05/18 07:41:38</td>   <td>6635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;FormAuthenticationTest.tearDown()[pri:0, instance:tests.FormAuthenticationTest@55040f2f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="bb9ebb">  <td>22/05/18 07:41:39</td>   <td>7332</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddToCartTest.setUp()[pri:0, instance:tests.AddToCartTest@64c87930]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="bb9ebb">  <td>22/05/18 07:41:41</td>   <td>9683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCartTest.addProductToBasket()[pri:0, instance:tests.AddToCartTest@64c87930]">addProductToBasket</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="bb9ebb">  <td>22/05/18 07:41:42</td>   <td>10310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddToCartTest.tearDown()[pri:0, instance:tests.AddToCartTest@64c87930]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="bb9ebb">  <td>22/05/18 07:41:42</td>   <td>10961</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddToCartTest.setUp()[pri:0, instance:tests.AddToCartTest@64c87930]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="bb9ebb">  <td>22/05/18 07:41:45</td>   <td>13383</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddToCartTest.deleteProductFromBasket()[pri:0, instance:tests.AddToCartTest@64c87930]">deleteProductFromBasket</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="bb9ebb">  <td>22/05/18 07:41:45</td>   <td>14089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AddToCartTest.tearDown()[pri:0, instance:tests.AddToCartTest@64c87930]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="ca8dfa">  <td>22/05/18 07:41:46</td>   <td>14760</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;CheckoutTest.setUp()[pri:0, instance:tests.CheckoutTest@400cff1a]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="ca8dfa">  <td>22/05/18 07:41:48</td>   <td>17056</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.buyProducts()[pri:0, instance:tests.CheckoutTest@400cff1a]">buyProducts</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="ca8dfa">  <td>22/05/18 07:41:50</td>   <td>18456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;CheckoutTest.tearDown()[pri:0, instance:tests.CheckoutTest@400cff1a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="b3f598">  <td>22/05/18 07:41:50</td>   <td>19125</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LogoutTest.setUp()[pri:0, instance:tests.LogoutTest@275710fc]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="b3f598">  <td>22/05/18 07:41:53</td>   <td>21418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutTest.testSuccessfulLogout()[pri:0, instance:tests.LogoutTest@275710fc]">testSuccessfulLogout</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="b3f598">  <td>22/05/18 07:41:54</td>   <td>22687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LogoutTest.tearDown()[pri:0, instance:tests.LogoutTest@275710fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="b3f598">  <td>22/05/18 07:41:55</td>   <td>23390</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LogoutTest.setUp()[pri:0, instance:tests.LogoutTest@275710fc]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="b3f598">  <td>22/05/18 07:41:57</td>   <td>25742</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogoutTest.testUnSuccessfulLogout()[pri:0, instance:tests.LogoutTest@275710fc]">testUnSuccessfulLogout</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="b3f598">  <td>22/05/18 07:41:58</td>   <td>26281</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LogoutTest.tearDown()[pri:0, instance:tests.LogoutTest@275710fc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="a593bf">  <td>22/05/18 07:41:58</td>   <td>27010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ScenarioTest.setUp()[pri:0, instance:tests.ScenarioTest@525f1e4e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="a593bf">  <td>22/05/18 07:42:01</td>   <td>29322</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ScenarioTest.performOperations()[pri:0, instance:tests.ScenarioTest@525f1e4e]">performOperations</td> 
+  <td>main@1132967838</td>   <td></td> </tr>
+<tr bgcolor="a593bf">  <td>22/05/18 07:42:03</td>   <td>31610</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ScenarioTest.tearDown()[pri:0, instance:tests.ScenarioTest@525f1e4e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1132967838</td>   <td></td> </tr>
 </table>
